[GTK] fast/canvas/DrawImageSinglePixelStretch.html fails https://bugs.webkit.org/show_bug.cgi?id=58309

Reviewed by Alejandro G. Castro.

Source/WebCore:

No new tests. This patch unskips a test.

Prevent sampling outside source boundaries, by creating subsurfaces from source surfaces.
This also requires careful handling of negative and floating source rectangles.

* platform/graphics/cairo/PlatformContextCairo.cpp:
(WebCore::PlatformContextCairo::drawSurfaceToContext): Use a subsurface to prevent sampling
outside rectangle boundaries.

LayoutTests:

* platform/gtk/TestExpectations: Unskip a test which is now passing.

Canonical link: https://commits.webkit.org/133203@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148681 268f45cc-cd09-0410-ab3c-d52691b4dbfc